Migration Java 11