@@ -26,7 +26,6 @@ import lombok.Getter;
 import lombok.Setter;
 import lombok.ToString;
 
-import java.util.Arrays;
 import java.util.List;
 
 /**
@@ -47,7 +46,7 @@ public class TopicDescribeCommand extends AbstractCommand<KafkaContainer> {
     @Override
     protected List<String> buildParameters(KafkaContainer container) {
         String zookeeperUrl = container.getEnvMap().get("KAFKA_ZOOKEEPER_CONNECT");
-        return Arrays.asList(
+        return List.of(
                 "kafka-topics",
                 "--describe",
                 "--topic",
